EB-50 Fix displaying categories in menu on mobile version

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -7,11 +7,12 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba($color-blue, 1);
-    padding: 2rem;
+    padding: 10rem 2rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    align-items: flex-end;
+    justify-content: space-between;
+    overflow-y: scroll;
     transform: translateX(100%);
     transition: all 1s cubic-bezier(0.2,1,0.3,1);
 
@@ -23,7 +24,7 @@
         font-size: $font-size-xl;
         list-style-type: none;
         text-transform: uppercase;
-        text-align: start;
+        text-align: end;
         margin-top: 5rem;
         opacity: 0 ;
         transition: opacity 1s ease-in;
@@ -36,27 +37,30 @@
     &__item {
         margin-bottom: 3rem;
 
+
         .submenu {
 
             &__list {
+                max-height: 0;
                 min-width: 150px;
                 max-width: 250px;
                 margin-top: 1rem;
-                padding: 1rem;
+                padding: 1rem 2rem 2rem 1rem;
+                background-color: $color-blue;
                 list-style-type: none;
-                position: absolute;
-                display: flex;
+                position: initial;
                 flex-direction: column;
                 opacity: 0;
                 visibility: hidden;
-                transition: .5s ease;
+                transition: all .3s ease;
                 transform: translateY(-10px);
 
                 &--active {
+                    max-height: initial;
                     list-style-type: none;
                     opacity: 1;
                     visibility: visible;  
-                    transform: translateY(0px);          
+                    transform: translateY(0px);           
                 }
             }
         
@@ -75,7 +79,7 @@
     }
 
     &__link {
-        padding: .5rem;
+        padding: .5rem 0;
         color: $color-white;
     }
 
@@ -88,7 +92,7 @@
             font-size: 2* $font-size-s;
             color: $color-white;
             padding: 0 0 0 .5rem;
-            margin: 0 3rem;
+            margin: 0 0 0 3rem;
         }
     }
 }
@@ -111,6 +115,8 @@
         background-color: transparent;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
+        overflow-y: visible;
         transform: translateX(0);
 
         &__bar {
@@ -152,6 +158,8 @@
             .submenu {
 
                 &__list {
+                    max-height: initial;
+                    position: absolute; 
                     background-color: rgba( $color-light-pink, 1);
                     display: flex;
                     flex-direction: column;
